--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mustache": "^4.1.0",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.17"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
