--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,8 @@
     "multer": "^1.4.2",
     "mustache": "^4.1.0",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
